# Fabric-Inventory

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TASKS.md  architecture.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  implementation-plan.md
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  Makefile  alembic.ini  entrypoint.dev.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026042500001_task_004_baseline.py  (+26 more)
backend/app/: config.py  db.py  dependencies.py  exceptions.py
backend/scripts/: __init__.py  spike_vyapar.py
backend/tests/: conftest.py  test_accounting_service.py  test_admin_invites.py  test_admin_roles_crud.py  test_admin_router.py  test_alembic_env_kek_guard.py  test_ar_reconciliation.py  test_auth.py  test_auth_forgot_rate_limit.py  test_auth_refresh_cookie.py  test_auth_routers.py  test_auth_switch_firm.py  test_bank_reconciliation.py  test_banking_routers.py  test_banking_service.py  test_bom.py  test_coa_routers.py  test_coa_service.py  test_common_guards.py  test_config.py  test_crypto.py  test_crypto01_audit_chain.py  test_crypto04_reencrypt_pii.py  test_dashboard_service.py  test_dc_routers.py  test_dc_service.py  test_dependencies.py  test_dos.py  test_email_adapter_swap.py  test_error_handler.py  test_export_service.py  test_exports.py  test_exports_banking.py  test_feature_flag_service.py  test_get_org_dek_db.py  test_grn_routers.py  test_grn_service.py  test_gst_service.py  test_health.py  test_idempotency.py  (+84 more)
docs/: review.md  (+1 more)
(+629 files in other folders)
